tests-integration/fixtures/checking/151_derive_bifunctor_missing_functor/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
WrapBoth ::
  forall (t6 :: Type) (t10 :: Type) (f :: (t6 :: Type) -> Type) (g :: (t10 :: Type) -> Type)
    (a :: (t6 :: Type)) (b :: (t10 :: Type)).
    (f :: (t6 :: Type) -> Type) (a :: (t6 :: Type)) ->
    (g :: (t10 :: Type) -> Type) (b :: (t10 :: Type)) ->
    WrapBoth @(t6 :: Type) @(t10 :: Type)
      (f :: (t6 :: Type) -> Type)
      (g :: (t10 :: Type) -> Type)
      (a :: (t6 :: Type))
      (b :: (t10 :: Type))

Types
WrapBoth ::
  forall (t6 :: Type) (t10 :: Type).
    ((t6 :: Type) -> Type) -> ((t10 :: Type) -> Type) -> (t6 :: Type) -> (t10 :: Type) -> Type

Data
WrapBoth
  Quantified = :2
  Kind = :0


Roles
WrapBoth = [Representational, Representational, Nominal, Nominal]

Derived
derive Bifunctor (WrapBoth @Type @Type (f :: Type -> Type) (g :: Type -> Type) :: Type -> Type -> Type)

Diagnostics
error[DeriveMissingFunctor]: Deriving Functor requires Data.Functor to be in scope
  --> 6:1..6:41
  |
6 | derive instance Bifunctor (WrapBoth f g)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[DeriveMissingFunctor]: Deriving Functor requires Data.Functor to be in scope
  --> 6:1..6:41
  |
6 | derive instance Bifunctor (WrapBoth f g)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
